# discord-crypto-spam-destroyer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: bad_hashes.txt  multi_server_config.json.example
src/discord_crypto_spam_destroyer/: __init__.py  bot.py  config.py  models.py
src/discord_crypto_spam_destroyer/discord_ui/: __init__.py  mod_report.py  report_store.py
src/discord_crypto_spam_destroyer/hashes/: __init__.py  phash.py  store.py
src/discord_crypto_spam_destroyer/moderation/: __init__.py  actions.py  decision.py  gating.py
src/discord_crypto_spam_destroyer/utils/: image.py
src/discord_crypto_spam_destroyer/vision/: __init__.py  openai_client.py
tests/: test_decision.py  test_gating.py  test_hashes.py  test_policy.py
tools/: check_images.py  generate_hashes.py  send_test_report.py  test_openai_image.py
